--- a/static_html_template/style.css
+++ b/static_html_template/style.css
@@ -150,21 +150,21 @@ color: #fff;
 	margin-top: 14px;
 }
 
-input[type=range] {
+.videoContainer input[type=range] {
   -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
   width: 100%; /* Specific width is required for Firefox. */
   background: transparent; /* Otherwise white in Chrome */
 }
 
-input[type=range]::-webkit-slider-thumb {
+.videoContainer input[type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
 }
 
-input[type=range]:focus {
+.videoContainer input[type=range]:focus {
   outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
 }
 
-input[type=range]::-ms-track {
+.videoContainer input[type=range]::-ms-track {
   width: 100%;
   cursor: pointer;
 
@@ -175,7 +175,7 @@ input[type=range]::-ms-track {
 }
 
 /* Special styling for WebKit/Blink */
-input[type=range]::-webkit-slider-thumb {
+.videoContainer input[type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
   border: 1px solid #fff;
   height: 30px;
@@ -189,7 +189,7 @@ input[type=range]::-webkit-slider-thumb {
 }
 
 /* All the same stuff for Firefox */
-input[type=range]::-moz-range-thumb {
+.videoContainer input[type=range]::-moz-range-thumb {
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
   border: 1px solid #fff;
   height: 30px;
@@ -201,7 +201,7 @@ input[type=range]::-moz-range-thumb {
 }
 
 /* All the same stuff for IE */
-input[type=range]::-ms-thumb {
+.videoContainer input[type=range]::-ms-thumb {
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
   border: 1px solid #fff;
   height: 30px;
@@ -213,7 +213,7 @@ input[type=range]::-ms-thumb {
   cursor: pointer;
 }
 
-input[type=range]::-webkit-slider-runnable-track {
+.videoContainer input[type=range]::-webkit-slider-runnable-track {
   width: 100%;
   height: 3px;
   cursor: pointer;
@@ -223,11 +223,11 @@ input[type=range]::-webkit-slider-runnable-track {
   border: 0.2px solid #010101;
 }
 
-input[type=range]:focus::-webkit-slider-runnable-track {
+.videoContainer input[type=range]:focus::-webkit-slider-runnable-track {
   background: #367ebd;
 }
 
-input[type=range]::-moz-range-track {
+.videoContainer input[type=range]::-moz-range-track {
   width: 100%;
   height: 3px;
   cursor: pointer;
@@ -237,7 +237,7 @@ input[type=range]::-moz-range-track {
   border: 0.2px solid #010101;
 }
 
-input[type=range]::-ms-track {
+.videoContainer input[type=range]::-ms-track {
   width: 100%;
   height: 3px;
   cursor: pointer;
@@ -246,26 +246,32 @@ input[type=range]::-ms-track {
   border-width: 16px 0;
   color: transparent;
 }
-input[type=range]::-ms-fill-lower {
+.videoContainer input[type=range]::-ms-fill-lower {
   background: #2a6495;
   border: 0.2px solid #010101;
   border-radius: 2.6px;
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
 }
-input[type=range]:focus::-ms-fill-lower {
+.videoContainer input[type=range]:focus::-ms-fill-lower {
   background: #1a4568;
 }
-input[type=range]::-ms-fill-upper {
+.videoContainer input[type=range]::-ms-fill-upper {
   background: #1a4568;
   border: 0.2px solid #010101;
   border-radius: 2.6px;
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
 }
-input[type=range]:focus::-ms-fill-upper {
+.videoContainer input[type=range]:focus::-ms-fill-upper {
   background: #367ebd;
 }
 
 .mainText {
 	width: 800px;
 	margin: 18px auto;
+}
+#loginModal {
+	display: block;
+}
+.eventsForm input {
+	width: 900px;
 }
