--- a/client/public/style.css
+++ b/client/public/style.css
@@ -33,6 +33,21 @@ nav {
 	padding-right: 30px;
 	border-bottom: solid 1px #034;
 }
+footer {
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#2b5d9b+0,1e5799+24,1e5799+24,207cca+63,207cca+63,7db9e8+100 */
+	background: #2b5d9b; /* Old browsers */
+	background: -moz-linear-gradient(bottom, #2b5d9b 0%, #1e5799 24%, #1e5799 24%, #207cca 63%, #207cca 63%, #7db9e8 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(bottom, #2b5d9b 0%,#1e5799 24%,#1e5799 24%,#207cca 63%,#207cca 63%,#7db9e8 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to top, #2b5d9b 0%,#1e5799 24%,#1e5799 24%,#207cca 63%,#207cca 63%,#7db9e8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2b5d9b', endColorstr='#7db9e8',GradientType=0 ); /* IE6-9 */
+	height: 70px;
+	width: 100%;
+	padding-left: 30px;
+	padding-right: 30px;
+	border-bottom: solid 1px #034;
+	position: relative;
+	bottom: 0px;
+}
 .Name {
 	font-family: 'Montserrat', sans-serif;
 	font-size: 48px;
@@ -40,8 +55,14 @@ nav {
 	padding-top: 10px;
 }
 .root {
+	min-height: 100vh;
 	position: relative;
+}
+.mainContainer {
 	min-height: 100%;
+
+	position: relative;
+	/*margin-bottom: -70px;*/
 }
 .mainNavigation {
 	float: right;
@@ -61,13 +82,13 @@ nav {
 	height: 98px;
 }
 .mainNavigation li:hover {
-/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#3b84d3+0,2777c6+24,6c99c9+63,7db9e8+100 */
-background: #3b84d3; /* Old browsers */
-background: -moz-linear-gradient(top, #3b84d3 0%, #2777c6 24%, #6c99c9 63%, #7db9e8 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top, #3b84d3 0%,#2777c6 24%,#6c99c9 63%,#7db9e8 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom, #3b84d3 0%,#2777c6 24%,#6c99c9 63%,#7db9e8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3b84d3', endColorstr='#7db9e8',GradientType=0 ); /* IE6-9 */
-color: #fff;
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#3b84d3+0,2777c6+24,6c99c9+63,7db9e8+100 */
+	background: #3b84d3; /* Old browsers */
+	background: -moz-linear-gradient(top, #3b84d3 0%, #2777c6 24%, #6c99c9 63%, #7db9e8 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(top, #3b84d3 0%,#2777c6 24%,#6c99c9 63%,#7db9e8 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to bottom, #3b84d3 0%,#2777c6 24%,#6c99c9 63%,#7db9e8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3b84d3', endColorstr='#7db9e8',GradientType=0 ); /* IE6-9 */
+	color: #fff;
 }
 .clear {
 	clear: both;
@@ -276,4 +297,82 @@ input[type=range]:focus::-ms-fill-upper {
 }
 .eventsForm label {
 	margin-bottom: -5px;
+}
+footer .left {
+	float: left;
+	margin: 16px 20px;
+	font-family: 'Mukta', sans-serif;
+	font-size: 17px;
+	font-weight: 300;
+	color: #fff;
+}
+footer .meetTeamLink {
+	float: right;
+	margin: 16px 20px;
+	font-family: 'Mukta', sans-serif;
+	font-size: 24px;
+	font-weight: 300;
+	color: #fff;
+}
+footer .meetTeamLink:hover {
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#3b84d3+0,2777c6+24,6c99c9+63,7db9e8+100 */
+	background: #3b84d3; /* Old browsers */
+	background: -moz-linear-gradient(bottom, #3b84d3 0%, #2777c6 24%, #6c99c9 63%, #7db9e8 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(bottom, #3b84d3 0%,#2777c6 24%,#6c99c9 63%,#7db9e8 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to top, #3b84d3 0%,#2777c6 24%,#6c99c9 63%,#7db9e8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3b84d3', endColorstr='#7db9e8',GradientType=0 ); /* IE6-9 */
+	color: #fff;
+	padding: 16px 20px 25px 40px;	
+	height: 70px;
+	margin-top: 0px;
+	margin-right: 0px;
+}
+footer .meetTeam {
+	position: absolute;
+	right: 1.4%;
+	bottom: 70px;
+}
+.personContainer {
+	margin-bottom: -10px;
+}
+footer .personHeader {
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#7db9e8+0,3784bf+29,207cca+72,7db9e8+100 */
+	background: #7db9e8; /* Old browsers */
+	background: -moz-linear-gradient(top, #7db9e8 0%, #3784bf 29%, #207cca 72%, #7db9e8 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(top, #7db9e8 0%,#3784bf 29%,#207cca 72%,#7db9e8 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to bottom, #7db9e8 0%,#3784bf 29%,#207cca 72%,#7db9e8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7db9e8', endColorstr='#7db9e8',GradientType=0 ); /* IE6-9 */
+	border-bottom: solid 1px #444;
+	border-top: solid 1px #444;
+	border-left: solid 1px #AAA;
+	border-right: solid 1px #AAA;
+}
+footer .personHeader:hover {
+/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#7db9e8+0,2d9fe5+29,2d9fe5+72,7db9e8+100 */
+background: #7db9e8; /* Old browsers */
+background: -moz-linear-gradient(top, #7db9e8 0%, #2d9fe5 29%, #2d9fe5 72%, #7db9e8 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top, #7db9e8 0%,#2d9fe5 29%,#2d9fe5 72%,#7db9e8 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom, #7db9e8 0%,#2d9fe5 29%,#2d9fe5 72%,#7db9e8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7db9e8', endColorstr='#7db9e8',GradientType=0 ); /* IE6-9 */
+	border-bottom: solid 1px #444;
+	border-top: solid 1px #444;
+	border-left: solid 1px #AAA;
+	border-right: solid 1px #AAA;
+}
+.personHeader img {
+	margin: 5px 10px 5px 22px;
+}
+.personHeader .personTitle {
+	color: #fff;
+	font-family: 'Mukta', sans-serif;
+	font-size: 18px;
+	font-weight: 300;
+	margin-right: 22px;
+}
+.personBody {
+	padding-top: 10px;
+	padding-bottom: 6px;
+	background: rgba(255,255,255, .8);
+	border-left: solid 1px #AAA;
+	border-right: solid 1px #AAA;
 }
