--- a/client/public/style.css
+++ b/client/public/style.css
@@ -13,6 +13,7 @@ html {
 body {
 	padding: 0;
 	margin: 0;
+	min-height: 100%;
 	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,dddddd+100 */
 	background: #ffffff; /* Old browsers */
 	background: -moz-linear-gradient(top, #ffffff 0%, #dddddd 100%); /* FF3.6-15 */
@@ -46,7 +47,7 @@ footer {
 	padding-right: 30px;
 	border-bottom: solid 1px #034;
 	position: relative;
-	bottom: 0px;
+	margin-bottom: -70px;
 }
 .Name {
 	font-family: 'Montserrat', sans-serif;
@@ -55,13 +56,16 @@ footer {
 	padding-top: 10px;
 }
 .root {
-	min-height: 100vh;
-	position: relative;
+  padding: 0 0 70px;
+  position: fixed;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 .mainContainer {
 	min-height: 100%;
-
-	position: relative;
 	/*margin-bottom: -70px;*/
 }
 .mainNavigation {
@@ -375,4 +379,12 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7db9e8', end
 	background: rgba(255,255,255, .8);
 	border-left: solid 1px #AAA;
 	border-right: solid 1px #AAA;
+}
+#loginModal {
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	background: rgba(000,000,000, .5);
 }
