--- a/client/public/style.css
+++ b/client/public/style.css
@@ -47,7 +47,6 @@ footer {
 	padding-right: 30px;
 	border-bottom: solid 1px #034;
 	position: relative;
-	margin-bottom: -70px;
 }
 .Name {
 	font-family: 'Montserrat', sans-serif;
@@ -65,13 +64,15 @@ footer {
   right: 0;
 }
 .mainContainer {
-	min-height: 100%;
+	/*min-height: calc(100vh - 8.4vh);*/
+	position: relative;
+	height: 100%;
 	/*margin-bottom: -70px;*/
 }
 .mainNavigation {
 	float: right;
 	padding-top: 30px;
-	height: 100px;
+	height: 100%;
 	/*background-color: #aaa;*/
 	margin-top: -79px;
 }
@@ -387,4 +388,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7db9e8', end
 	width: 100%;
 	height: 100%;
 	background: rgba(000,000,000, .5);
+	z-index: 1;
+}
+
+#signInLink {
+	margin-left: 500px;
 }
