--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,10 +20,12 @@ input, textarea {
 .login {
   width: 100%;
   height: 100%;
+  position: fixed;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #fff;
+  z-index: 3;
 }
 
 .login-form {
